--- a/config/cfg/presets/high.cfg
+++ b/config/cfg/presets/high.cfg
@@ -24,6 +24,8 @@ props=high
 ragdolls=high
 3dsky=on
 jigglebones=on
+sheens_speed=slow
+sheens_tint=high
 textures=very_high
 ropes=high
 vsync=off
