--- a/config/cfg/presets/ultra.cfg
+++ b/config/cfg/presets/ultra.cfg
@@ -24,6 +24,8 @@ props=ultra
 ragdolls=high
 3dsky=on
 jigglebones=force_on
+sheens_speed=slow
+sheens_tint=high
 textures=very_high
 ropes=ultra
 vsync=off
