--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -41,7 +41,7 @@
 // 8.0Mbps, 6.0Mbps, 4.0Mbps, 3.0Mbps, 2.5Mbps, 2.0Mbps, 1.5Mbps, 1.0Mbps, 762Kbps, 512Kbps, 384Kbps, 192Kbps, 128Kbps
 
 //download=auto
-// auto, all, nosounds, mapsonly, none
+// auto, all, nosounds, mapsonly, nothing
 
 //********************************************************************************
 // RENDERING MODULES
