--- a/config/cfg/presets/low.cfg
+++ b/config/cfg/presets/low.cfg
@@ -24,6 +24,8 @@ props=medium
 ragdolls=off
 3dsky=off
 jigglebones=off
+sheens_speed=slow
+sheens_tint=high
 textures=very_low
 ropes=off
 vsync=off
