--- a/config/mastercomfig/cfg/listenserver.cfg
+++ b/config/mastercomfig/cfg/listenserver.cfg
@@ -1,5 +1,5 @@
-mp_tournament 0 // Disables Casual/Competitive tournament mode
-mp_idledealmethod 0 // Disables AFK automatic kick
-mp_maxrounds 0 // Disables Casual/Competitive imposed limits (the two dots that appears when using the Match HUD)
+mp_tournament 0 // Disable Casual/Competitive tournament mode
+mp_idledealmethod 0 // Disable AFK automatic kick
+mp_maxrounds 0 // Disable Casual/Competitive imposed limits (the two dots that appears when using the Match HUD)
 mp_winlimit 0 // ^
 exec overrides/listenserver.cfg;exec user/listenserver.cfg // Run custom listenserver
