--- a/config/templates/overrides/post_comfig.cfg
+++ b/config/templates/overrides/post_comfig.cfg
@@ -1,1 +1,1 @@
-// Commands here will run at game launch, after mastercomfig core, but before presets, addon setup, and modules
+// Commands here will run at game launch, after mastercomfig core, but before presets, addons and modules
