hud_player_model console echo fix

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1053,8 +1053,8 @@ tf_scoreboard_ping_as_text 1 // Use text for ping in the scoreboard
 //cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
 //cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
 
-alias hud_player_model_off"cl_hud_playerclass_use_playermodel 0;alias hud_player_model_level hud_player_model=off"
-alias hud_player_model_on"cl_hud_playerclass_use_playermodel 1;alias hud_player_model_level hud_player_model=on"
+alias hud_player_model_off"cl_hud_playerclass_use_playermodel 0;alias hud_player_model_level echo hud_player_model=off"
+alias hud_player_model_on"cl_hud_playerclass_use_playermodel 1;alias hud_player_model_level echo hud_player_model=on"
 
 alias hud_player_model
 
