Revert unnecessary change

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -65,7 +65,7 @@ alias explode"cmd explode"
 
 //alias spec_next cmd spec_next;alias spec_prev cmd spec_prev // Optimize spectator view switching, but does not work with SourceTV
 
-alias sourcetv_off"alias spec_next cmd spec_next;alias spec_prev cmd spec_prev;alias sourcetv_level echo sourcetv=off;alias sourcetv_on;alias sourcetv=on;alias sourcetv"
+alias sourcetv_off"alias spec_next cmd spec_next;alias spec_prev cmd spec_prev;alias sourcetv_level echo sourcetv=off;alias sourcetv_on"
 alias sourcetv_on"alias sourcetv_level echo sourcetv=on"
 
 alias sourcetv sourcetv_on
