--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -108,10 +108,10 @@ alias packet_rate packet_rate_standard
 //cl_interp_ratio 2;cl_interp .03 // 2 snapshots interpolation buffer to avoid issues where one snapshot is dropped once in a while. Safest option for most users.
 //cl_interp_ratio 3;cl_interp .045 // Protect more against packet loss, increase further for more buffer protection. Recommended only for users with an unstable connection.
 
+alias snapshot_buffer_auto"alias snapshot_buffer_level echo snapshot_buffer=auto"
 alias snapshot_buffer_high"cl_interp_ratio 3;setinfo cl_interp_ratio 3;interp_high;alias snapshot_buffer_level echo snapshot_buffer=high"
 alias snapshot_buffer_safe"cl_interp_ratio 2;setinfo cl_interp_ratio 2;interp_safe;alias snapshot_buffer_level echo snapshot_buffer=safe"
 alias snapshot_buffer_low"cl_interp_ratio 1;setinfo cl_interp_ratio 1;interp_low;alias snapshot_buffer_level echo snapshot_buffer=low"
-alias snapshot_buffer_auto"alias snapshot_buffer_level echo snapshot_buffer=auto"
 
 alias snapshot_buffer snapshot_buffer_safe
 
@@ -172,17 +172,17 @@ alias cat_mm_queue_casual"quit smoking"
 // Controls networked file handling
 
 net_maxfilesize 64 // Max out file upload size for extra content
-//cl_downloadfilter all // Download all server custom files
-//cl_downloadfilter nosounds // Download all server custom files, except sounds
-//cl_downloadfilter mapsonly // Download only maps from server custom files
-//cl_downloadfilter none // Do not download anything from server custom files
+//cl_downloadfilter all // Download all custom files from servers
+//cl_downloadfilter nosounds // Download everything but sounds from servers
+//cl_downloadfilter mapsonly // Download only maps from servers
+//cl_downloadfilter none // Do not download any custom files from servers
 //tf_workshop_refresh // Refresh workshop subscriptions
 
+alias download_auto"alias download_level echo download=auto"
 alias download_all"cl_downloadfilter all;alias download_level echo download=all"
 alias download_nosounds"cl_downloadfilter nosounds;alias download_level echo download=nosounds"
 alias download_mapsonly"cl_downloadfilter mapsonly;alias download_level echo download=mapsonly"
-alias download_none"cl_downloadfilter none;alias download_level echo download=none"
-alias download_auto"alias download_level echo download=auto"
+alias download_nothing"cl_downloadfilter none;alias download_level echo download=nothing"
 
 alias download download_auto
 
@@ -528,12 +528,12 @@ alias romevision
 //mat_motion_blur_enabled 1 // Enable motion blur
 //mat_motion_blur_enabled 0 // Disable motion blur
 //mat_motion_blur_falling_intensity 1 // Blur intensity while falling
-//mat_motion_blur_falling_max 15 // Maximum blur from falling
-//mat_motion_blur_falling_min 5 // Minimum blur from falling
+//mat_motion_blur_falling_max 20 // Maximum blur from falling
+//mat_motion_blur_falling_min 10 // Minimum blur from falling
 //mat_motion_blur_forward_enabled 1 // Enable motion blur from forward motion
 //mat_motion_blur_forward_enabled 0 // Disable buggy motion blur from forward motion
 //mat_motion_blur_percent_of_screen_max 4 // Maximum percentage of screen that can blur
-//mat_motion_blur_rotation_intensity .05 // Adjust blur caused by rotational motion
+//mat_motion_blur_rotation_intensity 1 // Adjust blur caused by rotational motion
 //mat_motion_blur_strength 1 // Adjust overall blur strength
 
 alias motion_blur_off"mat_motion_blur_enabled 0;alias motion_blur_level echo motion_blur=off"
@@ -723,9 +723,9 @@ alias sprays
 //violence_hblood 0 // Enable silly gibs/blood (less performance, except when no gibs)
 //tf_playergib 1 // Control gibbing on local servers: 0: never, 1: default, 2: always.
 
+alias sillygibs_auto"alias sillygibs_level echo sillygibs=auto"
 alias sillygibs_off"violence_hgibs 1;violence_hblood 1;violence_agibs 1;violence_ablood 1;alias sillygibs_level echo sillygibs=off"
 alias sillygibs_on"violence_hgibs 0;violence_hblood 0;violence_agibs 0;violence_ablood 0;alias sillygibs_level echo sillygibs=on"
-alias sillygibs_auto"alias sillygibs_level echo sillygibs=auto"
 
 alias sillygibs sillygibs_auto
 
@@ -833,7 +833,7 @@ alias sheens_speed_slow"tf_sheen_framerate 15;alias sheens_speed_level echo shee
 alias sheens_speed_medium"tf_sheen_framerate 25;alias sheens_speed_level echo sheens_speed=medium"
 alias sheens_speed_fast"tf_sheen_framerate 55;alias sheens_speed_level echo sheens_speed=fast"
 
-alias sheens_speed sheens_speed_slow
+alias sheens_speed
 
 //tf_sheen_alpha_firstperson .5 // Intensity of tint
 
@@ -842,7 +842,7 @@ alias sheens_tint_medium"tf_sheen_alpha_firstperson .1;alias sheens_tint_level e
 alias sheens_tint_high"tf_sheen_alpha_firstperson .5;alias sheens_tint_level echo sheens_tint=high"
 alias sheens_tint_full"tf_sheen_alpha_firstperson 1;alias sheens_tint_level echo sheens_tint=full"
 
-alias sheens_tint sheens_tint_high
+alias sheens_tint
 
 // ----------------
 // '-- Textures --'
@@ -997,8 +997,6 @@ alias vsync
 // ---------------
 // General/misc HUD settings
 
-//cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
-//cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
 //cl_hud_minmode 1 // HUD min mode
 //hud_fastswitch 1 // Weapon switch behavior:
                    // 0 - PC Buckets
@@ -1016,7 +1014,6 @@ alias vsync
 //cl_software_cursor 1 // Uses a stylized cursor handled by the game instead of the OS
 //tf_scoreboard_mouse_mode 2 // Use mouse mode on scoreboard. 0 - disabled, 1 - always, 2 - on click (MOUSE2).
 //tf_scoreboard_alt_class_icons 1 // Alternate class icons on the scoreboard
-//tf_use_match_hud 1 // Show the top player bar on all servers (does not work in autoexec)
 //tf_mm_dashboard_slide_panel_step 10 // Change the horizontal offset of the primary matchmaking panel
 tf_dashboard_slide_time .1 // Time in seconds for dashboard transitions
 tf_item_inspect_model_auto_spin 1 // Auto spin items in the inspect view
@@ -1028,7 +1025,6 @@ tf_quest_map_tuner_wobble_magnitude .01 // Enable red tuner at the bottom
 //tf_disguise_menu_controller_mode 1 // Controller disguise menu
 //tf_simple_disguise_menu 0 // Concise disguise menu
 tf_colorblindassist 1 // Add extra icon for jarate (colorblind mode)
-//cl_disablehtmlmotd 1 // Disable HTML MOTDs (ads, music player, rules, fancy server intros)
 //sv_motd_unload_on_dismissal 1 // Server will tell the player to unload the MOTD
 //hud_classautokill 0 // No suicide on class change
 tf_halloween_bonus_ducks_cooldown 20 // Delay in seconds before BONUS DUCKS sound again
@@ -1037,13 +1033,9 @@ tf_hud_num_building_alert_beeps 2 // Numbers of beeps when an alert pops up on a
 //tf_rd_finale_beep_time 10 // Beep time during robot destruction victory
 tf_hud_show_servertimelimit 1 // Show server map time
 scr_centertime 5 // Time for center text on servers
-//tf_hud_target_id_alpha 100 // Transparency of target ID
 //tf_hud_target_id_disable_floating_health 0 // Show floating health bar
 //tf_hud_target_id_disable_floating_health 1 // Hide floating health bar
 hud_medichealtargetmarker 1 // Shows Medi Gun heal target with a small marker
-//tf_healthicon_height_offset 10 // Offset of heath icon
-//tf_hud_target_id_offset 0 // Vertical offset of target ID
-//tf_hud_target_id_show_avatars 2 // Show avatars: 0 - never, 1 - from everyone, 2 - from friends.
 //tf_spectator_target_location 0 // 0 - center (default)
                                  // 1 - bottom left
                                  // 2 - bottom center
@@ -1058,10 +1050,17 @@ tf_scoreboard_ping_as_text 1 // Use text for ping in the scoreboard
 //tf_queue_spinner_color 1 // Blue queue TF logo spinner
 //tf_hud_notification_duration 3 // How long notifications appear on screen
 
-alias hud_player_model_off"cl_hud_playerclass_use_playermodel 0;alias hud_player_model_level hud_player_model=off"
-alias hud_player_model_on"cl_hud_playerclass_use_playermodel 1;alias hud_player_model_level hud_player_model=on"
+//cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
+//cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
+
+alias hud_player_model_off"cl_hud_playerclass_use_playermodel 0;alias hud_player_model_level echo hud_player_model=off"
+alias hud_player_model_on"cl_hud_playerclass_use_playermodel 1;alias hud_player_model_level echo hud_player_model=on"
 
 alias hud_player_model
+
+//tf_healthicon_height_offset 10 // Offset of heath icon
+//tf_hud_target_id_offset 0 // Vertical offset of target ID
+//tf_hud_target_id_alpha 100 // Transparency of target ID
 
 alias hud_panels_off"tf_healthicon_height_offset -10000;tf_hud_target_id_offset -10000;tf_hud_target_id_alpha 0;alias hud_panels_level echo hud_panels=off"
 alias hud_panels_low"tf_healthicon_height_offset 10;tf_hud_target_id_offset 0;tf_hud_target_id_alpha 255;alias hud_panels_level echo hud_panels=low"
@@ -1069,11 +1068,15 @@ alias hud_panels_high"tf_healthicon_height_offset 10;tf_hud_target_id_offset 0;t
 
 alias hud_panels hud_panels_high
 
+//tf_hud_target_id_show_avatars 1 // Show avatars: 0 - never, 1 - from everyone, 2 - from friends.
+
 alias hud_avatars_off"tf_hud_target_id_show_avatars 0;alias hud_avatars_level echo hud_avatars=off"
 alias hud_avatars_everyone"tf_hud_target_id_show_avatars 1;alias hud_avatars_level echo hud_avatars=everyone"
 alias hud_avatars_friends"tf_hud_target_id_show_avatars 2;alias hud_avatars_level echo hud_avatars=friends"
 
 alias hud_avatars hud_avatars_everyone
+
+//tf_use_match_hud 1 // Show the top player bar on all servers (does not work in autoexec)
 
 alias match_hud_alias"tf_use_match_hud 0;alias match_hud_level echo match_hud=off"
 alias match_hud_alias2"alias match_hud_off match_hud_alias"
@@ -1083,12 +1086,16 @@ alias match_hud_on"tf_use_match_hud 1;alias match_hud_once;alias match_hud_level
 
 alias match_hud match_hud_on
 
+//map_background itemtest // Map background for preloading or embellishing the main menu
+
 alias dynamic_background_off"alias dynamic_background_level echo dynamic_background=off"
 alias dynamic_background_preload"map_background preload_room;wait 10;disconnect;alias dynamic_background_level echo dynamic_background=preload"
 alias dynamic_background_itemtest"map_background itemtest;wait 10;disconnect;alias dynamic_background_level echo dynamic_background=itemtest"
 alias dynamic_background_dustbowl"map_background background01;wait 1000;stop;alias dynamic_background_level echo dynamic_background=dustbowl"
 
 alias dynamic_background dynamic_background_off
+
+//cl_disablehtmlmotd 1 // Disable HTML MOTDs (ads, music player, rules, fancy server intros)
 
 alias htmlmotd_off"cl_disablehtmlmotd 1;alias htmlmotd_level echo htmlmotd=off"
 alias htmlmotd_on"cl_disablehtmlmotd 0;alias htmlmotd_level echo htmlmotd=on"
@@ -1159,7 +1166,7 @@ tf_backpack_page_button_delay .25 // Decrease button delay for moving items
 //cl_crosshair_green 39 // Crosshair green (0 to 255)
 //cl_crosshair_blue 176 // Crosshair blue (0 to 255)
 //cl_crosshair_scale 32 // Size of crosshair
-//cl_crosshair_file"" // Style of crosshair
+//cl_crosshair_file "" // Style of crosshair
 //cl_observercrosshair 0 // Disable crosshair in spectator
 //crosshair 0 // Disable crosshair entirely
 
@@ -1221,16 +1228,16 @@ alias hud_contracts hud_contracts_auto
 // '-- Achievements --'
 // --------------------
 // Achievement effects and HUD tracker
-// This seems to tick even when hidden, so forcefully disable it.
 
-//hud_achievement_glowtime 1 // Glow achievements for a little while shorter
-//hud_achievement_tracker 1 // Enable achievement tracker
-//hud_achievement_count 8 // Max achievements shown on HUD
-//hud_achievement_count_engineer 3 // Max achievements shown on HUD when playing as Engineer
-//hud_achievement_description 0;hud_achievement_tracker 0;hud_achievement_count 0;hud_achievement_count_engineer 0;hud_achievement_glowtime 0 // Disable HUD tracking
+//hud_achievement_count 8 // Max number of achievements that can be shown on the HUD
+//hud_achievement_count_engineer 3 // Max number of achievements that can be shown on the HUD when playing as Engineer
+//hud_achievement_description 1 // Show full descriptions of achievements on the HUD
+//hud_achievement_glowtime 2.5 // Duration of glow effect around incremented achievements
+//hud_achievement_tracker 1 // Show or hide the achievement tracker
+//hud_achievement_count 0;hud_achievement_count_engineer 0;hud_achievement_description 0;hud_achievement_glowtime 0;hud_achievement_tracker 0 // Disable HUD tracking
 
-alias hud_achievement_off"hud_achievement_description 0;hud_achievement_tracker 0;hud_achievement_count 0;hud_achievement_count_engineer 0;hud_achievement_glowtime 0;alias hud_achievement_level hud_achievement=off"
-alias hud_achievement_on"hud_achievement_description 1;hud_achievement_tracker 1;hud_achievement_count 8;hud_achievement_count_engineer 3;hud_achievement_glowtime 2.5;alias hud_achievement_level hud_achievement=on"
+alias hud_achievement_off"hud_achievement_count 0;hud_achievement_count_engineer 0;hud_achievement_description 0;hud_achievement_glowtime 0;hud_achievement_tracker 0;alias hud_achievement_level echo hud_achievement=off"
+alias hud_achievement_on"hud_achievement_count 8;hud_achievement_count_engineer 3;hud_achievement_description 1;hud_achievement_glowtime 2.5;hud_achievement_tracker 1;alias hud_achievement_level echo hud_achievement=on"
 
 alias hud_achievement hud_achievement_on
 
@@ -1415,7 +1422,7 @@ alias outlines
               // 0 - to console
               // 1 - to console and chat
               // 2 - to console and HUD
-//ds_prefix"" // Prefix file names with this text
+//ds_prefix "" // Prefix file names with this text
 //ds_record // Start recording a demo
 //ds_stop // Stop recording a demo
 //ds_screens 1 // Take a screenshot of the scoreboard when the round ends
@@ -1718,7 +1725,7 @@ alias download=auto"alias download download_auto"
 alias download=all"alias download download_all"
 alias download=nosounds"alias download download_nosounds"
 alias download=mapsonly"alias download download_mapsonly"
-alias download=none"alias download download_none"
+alias download=nothing"alias download download_nothing"
 alias lod=low"alias lod lod_low"
 alias lod=medium"alias lod lod_medium"
 alias lod=high"alias lod lod_high"
