--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.8.0 | March 18, 2022
+// Version: 9.8.0 | April 9, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -485,15 +485,15 @@ alias post_processing
 
 //mat_color_projection 0 // No deferred color correction
 
-alias colorblind_off"mat_color_projection 0"
-alias colorblind_protanopia"mat_color_projection 1"
-alias colorblind_deuteranopia"mat_color_projection 2"
-alias colorblind_tritanopia"mat_color_projection 3"
-alias colorblind_typical_achromatopsia"mat_color_projection 4"
-alias colorblind_protanomaly"mat_color_projection 5"
-alias colorblind_deutanomaly"mat_color_projection 6"
-alias colorblind_tritanomaly"mat_color_projection 7"
-alias colorblind_atypical_achromatopsia"mat_color_projection 8"
+//alias colorblind_off"mat_color_projection 0"
+//alias colorblind_protanopia"mat_color_projection 1"
+//alias colorblind_deuteranopia"mat_color_projection 2"
+//alias colorblind_tritanopia"mat_color_projection 3"
+//alias colorblind_typical_achromatopsia"mat_color_projection 4"
+//alias colorblind_protanomaly"mat_color_projection 5"
+//alias colorblind_deutanomaly"mat_color_projection 6"
+//alias colorblind_tritanomaly"mat_color_projection 7"
+//alias colorblind_atypical_achromatopsia"mat_color_projection 8"
 
 // ---------------------------------
 // '-- Pyrovision and Romevision --'
@@ -1076,7 +1076,7 @@ alias hud_avatars_friends"tf_hud_target_id_show_avatars 2;alias hud_avatars_leve
 
 alias hud_avatars hud_avatars_everyone
 
-//tf_use_match_hud 1 // Show the top player bar on all servers (does not work in autoexec)
+//tf_use_match_hud 0 // Hide the top player bar on all servers (does not work in autoexec)
 
 alias match_hud_alias"tf_use_match_hud 0;alias match_hud_level echo match_hud=off"
 alias match_hud_alias2"alias match_hud_off match_hud_alias"
@@ -1086,7 +1086,7 @@ alias match_hud_on"tf_use_match_hud 1;alias match_hud_once;alias match_hud_level
 
 alias match_hud match_hud_on
 
-//map_background itemtest // Map background for preloading or embellishing the main menu
+//map_background itemtest // Map background for enhancing main menu visuals, or to preload content
 
 alias dynamic_background_off"alias dynamic_background_level echo dynamic_background=off"
 alias dynamic_background_preload"map_background preload_room;wait 10;disconnect;alias dynamic_background_level echo dynamic_background=preload"
