--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.8.0 | March 18, 2022
+// Version: 9.8.0 | April 9, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -33,6 +33,7 @@ net_chokeloop 1 // Early check for multiplayer
 sv_lan 1 // Protect local servers
 cl_localnetworkbackdoor 0 // Fast path to skip backdoor
 host_limitlocal 1 // Prevent excess work on local
+//cl_predict 1 // Force prediction back on during matches (https://github.com/ValveSoftware/Source-1-Games/issues/2618) (does not work in autoexec)
 
 // Directly forward string cmds to server for lower latency
 alias resetclass"cmd resetclass"
@@ -101,7 +102,6 @@ net_compresspackets 0;net_compresspackets_minsize 4097 // Skip packet compressio
 net_maxcleartime 0 // No need to check for our limit, since cmdrate is the bound
 //rate 196608 // Rate used for server communication, delays packets based on this value and packet size
 net_splitpacket_maxrate 131072 // Max split packet rate
-//net_splitpacket_maxrate 1048576 // Use rate as bound for split packets
 
 rate 131072 // 1.0Mbps game bandwidth
 
@@ -111,10 +111,10 @@ rate 131072 // 1.0Mbps game bandwidth
 // Controls networked file handling
 
 net_maxfilesize 64 // Max out file upload size for extra content
-//cl_downloadfilter all // Download all server custom files
-//cl_downloadfilter nosounds // Download all server custom files, except sounds
-//cl_downloadfilter mapsonly // Download only maps from server custom files
-//cl_downloadfilter none // Do not download anything from server custom files
+//cl_downloadfilter all // Download all custom files from servers
+//cl_downloadfilter nosounds // Download everything but sounds from servers
+//cl_downloadfilter mapsonly // Download only maps from servers
+//cl_downloadfilter none // Do not download any custom files from servers
 //tf_workshop_refresh // Refresh workshop subscriptions
 
 // -------------------
@@ -177,7 +177,7 @@ r_dynamic 0 // Disable dynamic lighting (muzzle flash lighting, explosions and o
 //r_maxdlights 12 // Reduce maximum dynamic lights
 r_maxdlights 0 // Do not allow any dynamic lights
 //r_worldlightmin .0002 // Render practically all world lighting
-r_worldlightmin .0008 // Do not render insignificant world lighting
+r_worldlightmin .0004 // Do not render insignificant world lighting
 //r_worldlightmin 999999 // Reject all world lighting
 //r_worldlights 4 // Use the maximum amount of world lights
 //r_worldlights 2 // Reduce maximum lights applied to a vertex
@@ -330,12 +330,12 @@ tf_romevision_opt_in 0 // Opt out of Romevision
 //mat_motion_blur_enabled 1 // Enable motion blur
 mat_motion_blur_enabled 0 // Disable motion blur
 //mat_motion_blur_falling_intensity 1 // Blur intensity while falling
-//mat_motion_blur_falling_max 15 // Maximum blur from falling
-//mat_motion_blur_falling_min 5 // Minimum blur from falling
+//mat_motion_blur_falling_max 20 // Maximum blur from falling
+//mat_motion_blur_falling_min 10 // Minimum blur from falling
 //mat_motion_blur_forward_enabled 1 // Enable motion blur from forward motion
 //mat_motion_blur_forward_enabled 0 // Disable buggy motion blur from forward motion
 //mat_motion_blur_percent_of_screen_max 4 // Maximum percentage of screen that can blur
-//mat_motion_blur_rotation_intensity .05 // Adjust blur caused by rotational motion
+//mat_motion_blur_rotation_intensity 1 // Adjust blur caused by rotational motion
 //mat_motion_blur_strength 1 // Adjust overall blur strength
 
 // ---------------------
@@ -427,6 +427,7 @@ r_drawmodeldecals 0 // Disable blood decals on bodies. Will prevent new objects 
 // ------------------
 // Decals placed by the map author
 
+// Note: fully removing map decals does not work in autoexec
 //r_renderoverlayfragment 1 // Enable overlays to see some decal based logos and posters on walls
 r_renderoverlayfragment 0 // Disable overlays, small performance increase
 //r_overlayfadeenable 0 // Fade map decals based on globally set distance
@@ -640,8 +641,6 @@ gl_paircache_rows_lg2 11 // Expand number of shader cache rows, improves cache h
 // ---------------
 // General/misc HUD settings
 
-//cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
-cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
 //cl_hud_minmode 1 // HUD min mode
 //hud_fastswitch 1 // Weapon switch behavior:
                    // 0 - PC Buckets
@@ -659,7 +658,6 @@ cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
 //cl_software_cursor 1 // Uses a stylized cursor handled by the game instead of the OS
 //tf_scoreboard_mouse_mode 2 // Use mouse mode on scoreboard. 0 - disabled, 1 - always, 2 - on click (MOUSE2).
 //tf_scoreboard_alt_class_icons 1 // Alternate class icons on the scoreboard
-//tf_use_match_hud 1 // Show the top player bar on all servers
 //tf_mm_dashboard_slide_panel_step 10 // Change the horizontal offset of the primary matchmaking panel
 tf_dashboard_slide_time 0 // Time in seconds for dashboard transitions
 //tf_item_inspect_model_auto_spin 1 // Auto spin items in the inspect view
@@ -671,7 +669,6 @@ tf_quest_map_tuner_wobble_magnitude 0 // Disable the red tuner on the contracker
 //tf_disguise_menu_controller_mode 1 // Controller disguise menu
 //tf_simple_disguise_menu 0 // Concise disguise menu
 tf_colorblindassist 1 // Add extra icon for jarate (colorblind mode)
-//cl_disablehtmlmotd 1 // Disable HTML MOTDs (ads, music player, rules, fancy server intros)
 //sv_motd_unload_on_dismissal 1 // Server will tell the player to unload the MOTD
 //hud_classautokill 0 // No suicide on class change
 tf_halloween_bonus_ducks_cooldown 20 // Delay in seconds before BONUS DUCKS sound again
@@ -680,13 +677,9 @@ tf_halloween_bonus_ducks_cooldown 20 // Delay in seconds before BONUS DUCKS soun
 //tf_rd_finale_beep_time 10 // Beep time during robot destruction victory
 tf_hud_show_servertimelimit 1 // Show server map time
 //scr_centertime 5 // Time for center text on servers
-tf_hud_target_id_alpha 255 // Transparency of target ID
 //tf_hud_target_id_disable_floating_health 0 // Show floating health bar
 //tf_hud_target_id_disable_floating_health 1 // Hide floating health bar
 //hud_medichealtargetmarker 1 // Shows Medi Gun heal target with a small marker
-//tf_healthicon_height_offset 10 // Offset of heath icon
-//tf_hud_target_id_offset 0 // Vertical offset of target ID
-tf_hud_target_id_show_avatars 0 // Show avatars: 0 - never, 1 - from everyone, 2 - from friends.
 //tf_spectator_target_location 0 // 0 - center (default)
                                  // 1 - bottom left
                                  // 2 - bottom center
@@ -700,6 +693,21 @@ tf_scoreboard_ping_as_text 0 // Use inaccurate ping bars for ping in the scorebo
 //tf_queue_spinner_color 0 // Orange queue TF logo spinner
 //tf_queue_spinner_color 1 // Blue queue TF logo spinner
 //tf_hud_notification_duration 3 // How long notifications appear on screen
+
+//cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
+cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
+
+//tf_healthicon_height_offset 10 // Offset of heath icon
+//tf_hud_target_id_offset 0 // Vertical offset of target ID
+tf_hud_target_id_alpha 255 // Transparency of target ID
+
+tf_hud_target_id_show_avatars 0 // Show avatars: 0 - never, 1 - from everyone, 2 - from friends.
+
+//tf_use_match_hud 0 // Hide the top player bar on all servers (does not work in autoexec)
+
+//map_background itemtest // Map background for enhancing main menu visuals, or to preload content
+
+cl_disablehtmlmotd 1 // Disable HTML MOTDs (ads, music player, rules, fancy server intros)
 
 // -------------------
 // '-- Combat Text --'
@@ -754,7 +762,7 @@ tf_backpack_page_button_delay .25 // Decrease button delay for moving items
 //cl_crosshair_green 39 // Crosshair green (0 to 255)
 //cl_crosshair_blue 176 // Crosshair blue (0 to 255)
 //cl_crosshair_scale 32 // Size of crosshair
-//cl_crosshair_file"" // Style of crosshair
+//cl_crosshair_file "" // Style of crosshair
 //cl_observercrosshair 0 // Disable crosshair in spectator
 //crosshair 0 // Disable crosshair entirely
 
@@ -805,11 +813,12 @@ cl_vote_ui_active_after_voting 1 // Keep the vote UI active after voting to see 
 // Achievement effects and HUD tracker
 // This seems to tick even when hidden, so forcefully disable it.
 
-//hud_achievement_glowtime 1 // Glow achievements for a little while shorter
-//hud_achievement_tracker 1 // Enable achievement tracker
-//hud_achievement_count 8 // Max achievements shown on HUD
-//hud_achievement_count_engineer 3 // Max achievements shown on HUD when playing as Engineer
-hud_achievement_description 0;hud_achievement_tracker 0;hud_achievement_count 0;hud_achievement_count_engineer 0;hud_achievement_glowtime 0 // Disable HUD tracking
+//hud_achievement_count 8 // Max number of achievements that can be shown on the HUD
+//hud_achievement_count_engineer 3 // Max number of achievements that can be shown on the HUD when playing as Engineer
+//hud_achievement_description 1 // Show full descriptions of achievements on the HUD
+//hud_achievement_glowtime 2.5 // Duration of glow effect around incremented achievements
+//hud_achievement_tracker 1 // Show or hide the achievement tracker
+hud_achievement_count 0;hud_achievement_count_engineer 0;hud_achievement_description 0;hud_achievement_glowtime 0;hud_achievement_tracker 0 // Disable HUD tracking
 
 // ------------
 // '-- Info --'
@@ -985,7 +994,7 @@ tf_spec_xray_disable 0 // Enable nametags while spectating
               // 0 - to console
               // 1 - to console and chat
               // 2 - to console and HUD
-//ds_prefix"" // Prefix file names with this text
+//ds_prefix "" // Prefix file names with this text
 //ds_record // Start recording a demo
 //ds_stop // Stop recording a demo
 //ds_screens 1 // Take a screenshot of the scoreboard when the round ends
@@ -1106,7 +1115,6 @@ snd_disable_mixer_duck 1 // Disable some sounds being mixed to be louder than ot
 //snd_surround_speakers 2 // Force mono/stereo
 //snd_surround_speakers 4 // Force quad
 //snd_surround_speakers 5 // Force 5.1
-snd_legacy_surround 0 // Turn off legacy surround sound pathway
 //windows_speaker_config -1 // Windows speaker configuration
 
 // ----------------------
@@ -1249,7 +1257,7 @@ alias l19"echo"|||-------||||||||||||||||||||-------|||";l20"
 alias l20"echo"|||-----------||||||||||||-----------|||"
 
 // Define version
-alias version_comfig"echo mastercomfig version: 9.8.0 | March 18, 2022"
+alias version_comfig"echo mastercomfig version: 9.8.0 | April 9, 2022"
 
 // Echo
 echo""
@@ -1264,7 +1272,7 @@ echo""
 echo"  **********************************"
 echo"  **********************************"
 echo"  mastercomfig 9.8.0 loaded"
-echo"  March 18, 2022"
+echo"  April 9, 2022"
 echo"  **********************************"
 echo"  **********************************"
 echo""
@@ -1272,7 +1280,7 @@ echo""
 echo""
 echo""
 echo"  ##################################################"
-echo"  This release took 30 hours to produce."
+echo"  This release took 50 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
 echo"  docs.mastercomfig.com/page/support_me"
