--- a/config/cfg/presets/high.cfg
+++ b/config/cfg/presets/high.cfg
@@ -10,7 +10,7 @@ water=very_high
 particles=high
 post_processing=high
 pyrovision=high
-romevision=on
+romevision=off
 motion_blur=off
 anti_aliasing=msaa_8x
 texture_filter=aniso8x
