--- a/config/cfg/presets/ultra.cfg
+++ b/config/cfg/presets/ultra.cfg
@@ -10,7 +10,7 @@ water=ultra
 particles=ultra
 post_processing=high
 pyrovision=high
-romevision=on
+romevision=off
 motion_blur=off
 anti_aliasing=msaa_8x
 texture_filter=aniso16x
