--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.8.0 | April 9, 2022
+// Version: 9.8.1 | April 10, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -23,14 +23,14 @@ net_maxpacketdrop 0 // Use all packets
 cl_timeout 60 // Max client timeout
 //cl_smooth 1 // Do not instantly correct prediction errors, as they are predominantly small enough to be smoothed over with negligible error and has less distracting jitters in view
 cl_smoothtime .05 // Decrease smooth time to reject large prediction errors faster
-hud_escort_interp .1 // Smooth out payload cart progress over slightly less time
-//cl_pred_optimize 2 // Keep client-side prediction
+//cl_pred_optimize 2 // Keep client-side prediction incrementally going within error bounds
 //net_queued_packet_thread 1 // Keep thread on in case we start sending split packets
 //net_queued_packet_thread 581304 // Queue all packets
 //net_splitrate 1 // Number of fragments for a splitpacket that can be sent per frame
 //net_udp_rcvbuf 131072 // Game does not handle overflows correctly, so no point in setting this lower
 net_chokeloop 1 // Early check for multiplayer
 sv_lan 1 // Protect local servers
+tf_mm_strict 1 // ^
 cl_localnetworkbackdoor 0 // Fast path to skip backdoor
 host_limitlocal 1 // Prevent excess work on local
 //cl_predict 1 // Force prediction back on during matches (https://github.com/ValveSoftware/Source-1-Games/issues/2618) (does not work in autoexec)
@@ -198,7 +198,6 @@ mat_bumpmap 0 // Disable bumpmapping materials
 mat_specular 0 // Disable specular materials
 //mat_monitorgamma 2.2 // Monitor gamma (2.2 is the assumed value in various places)
 r_lightcache_zbuffercache 1 // Cache places where lighting is able to reach dynamic entities and use new lighting pathway
-mat_parallaxmap 0 // Mark unused parallax mapping shader path as disabled
 mat_softwarelighting 0 // Make sure we use the GPU
 r_hunkalloclightmaps 0 // Use native memory allocation because z buffer cache takes up the hunk
 
@@ -239,7 +238,7 @@ cl_ejectbrass 0 // Bullet ejection on shots
 cl_muzzleflash_dlight_1st 0 // Disable dynamic light from muzzle flash in DoD and possibly other mods
 cl_drawmonitors 0 // Draw monitors in HL2 and CS
 muzzleflash_light 0 // Muzzle flash lights
-//cl_fasttempentcollision 5 // Check every x ticks for collisions on syringes and pomson
+//cl_fasttempentcollision 10 // Check every x ticks for collisions on syringes and pomson
 cl_fasttempentcollision 1000000 // Never check collision
 //cl_fasttempentcollision 0 // Always check collision
 
@@ -616,7 +615,6 @@ gl_magnify_resolve_mode 1 // Use fastest resolve mode when up scaling too
 gl_batch_tex_creates 1 // Preemptively run glGenTextures calls and add them to a pool instead of doing it per tex
 gl_batch_tex_destroys 1 // Destroy from batch texture pool
 gl_radar7954721_workaround_mixed 0 // Disable OpenGL trick which pushes and pops and attributes to work around an old NVIDIA driver bug
-gl_amd_occlusion_workaround 0 // Disable OpenGL trick which enables SRGB writes on occlusion
 gl_paircache_rows_lg2 11 // Expand number of shader cache rows, improves cache hits at the cost of extra memory
 //sdl_displayindex 0 // Which display index to use (Linux and macOS only)
 
@@ -658,7 +656,7 @@ gl_paircache_rows_lg2 11 // Expand number of shader cache rows, improves cache h
 //cl_software_cursor 1 // Uses a stylized cursor handled by the game instead of the OS
 //tf_scoreboard_mouse_mode 2 // Use mouse mode on scoreboard. 0 - disabled, 1 - always, 2 - on click (MOUSE2).
 //tf_scoreboard_alt_class_icons 1 // Alternate class icons on the scoreboard
-//tf_mm_dashboard_slide_panel_step 10 // Change the horizontal offset of the primary matchmaking panel
+//tf_mm_dashboard_slide_panel_step 20 // Change the horizontal offset of the primary matchmaking panel
 tf_dashboard_slide_time 0 // Time in seconds for dashboard transitions
 //tf_item_inspect_model_auto_spin 1 // Auto spin items in the inspect view
 tf_item_inspect_model_auto_spin 0 // Do not auto spin items in the inspect view
@@ -693,6 +691,8 @@ tf_scoreboard_ping_as_text 0 // Use inaccurate ping bars for ping in the scorebo
 //tf_queue_spinner_color 0 // Orange queue TF logo spinner
 //tf_queue_spinner_color 1 // Blue queue TF logo spinner
 //tf_hud_notification_duration 3 // How long notifications appear on screen
+//hud_takesshots 1 // Take a scoreboard screenshot at the end of the match
+//tf_mvm_min_players_to_start 1 // Start MvM with 1 player
 
 //cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
 cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
@@ -717,7 +717,7 @@ cl_disablehtmlmotd 1 // Disable HTML MOTDs (ads, music player, rules, fancy serv
 //hud_combattext 1 // Enable damage text
 //hud_combattext_batching 1 // Collect damage into one number over a time interval
 //hud_combattext_batching_window 1 // Time in seconds to collect damage (maximum 2 seconds)
-//hud_combattext_doesnt_block_overhead_text 1 // Allow CRIT! to appear
+hud_combattext_doesnt_block_overhead_text 1 // Allow CRIT! to appear
 //hud_combattext_healing 1 // Show healing text
 //hud_combattext_red 255 // Red value for damage text color (0 to 255)
 //hud_combattext_green 0 // Green value for damage text color (0 to 255)
@@ -738,7 +738,7 @@ cl_mute_all_comms 1 // Disable text and voice for muted players
 //cl_mute_all_comms 0 // Disable voice for muted players
 //hud_deathnotice_time 5 // How long in seconds a killfeed item stays on screen
 //cl_enable_text_chat 1 // Enable text chat
-tf_chat_popup_hold_time 3 // How long party messages appear on the main menu
+tf_chat_popup_hold_time 5 // How long party messages appear on the main menu
 
 // ----------------
 // '-- Backpack --'
@@ -910,6 +910,7 @@ alias debug_vprof_off"vprof_off;vprof_reset;con_logfile 0;vprof_dump_oninterval 
 //cc_sentencecaptionnorepeat 4 // How many times a caption can repeat
 //snd_vox_captiontrace 1 // Show sentence IDs when there is no caption
 //cc_lang lang // Force a specific closed caption language
+cc_captiontrace 0 // Do not report missing captions in console
 
 // -----------------
 // '-- Net Graph --'
@@ -1257,7 +1258,7 @@ alias l19"echo"|||-------||||||||||||||||||||-------|||";l20"
 alias l20"echo"|||-----------||||||||||||-----------|||"
 
 // Define version
-alias version_comfig"echo mastercomfig version: 9.8.0 | April 9, 2022"
+alias version_comfig"echo mastercomfig version: 9.8.1 | April 10, 2022"
 
 // Echo
 echo""
@@ -1271,8 +1272,8 @@ echo""
 echo""
 echo"  **********************************"
 echo"  **********************************"
-echo"  mastercomfig 9.8.0 loaded"
-echo"  April 9, 2022"
+echo"  mastercomfig 9.8.1 loaded"
+echo"  April 10, 2022"
 echo"  **********************************"
 echo"  **********************************"
 echo""
