--- a/config/templates/modules/modules.cfg
+++ b/config/templates/modules/modules.cfg
@@ -77,8 +77,8 @@
 //pyrovision=high
 // high, medium, low
 
-//romevision=on
-// on, off
+//romevision=off
+// off, on
 
 //motion_blur=off
 // high, low, off
