--- a/config/cfg/addons/lowmem.cfg
+++ b/config/cfg/addons/lowmem.cfg
@@ -8,6 +8,7 @@ gl_batch_tex_destroys 0 // We do not use batch textures
 flush_models // Unload models on every map load to save memory (if supported by mod_support)
 mat_bufferprimitives 0 // Flush primitives when meshes draw
 mod_dynamicunloadtime 110 // Unload models sooner
+sys_minidumpspewlines 0 // Skip storing console output
 
 echo"Low Memory addon applied"
 echo"WARNING: this addon will REDUCE performance with high memory!!!"
