--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -1,7 +1,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 // '~~~~~~~~~ mastercomfig ~~~~~~~~~'
 // ----------------------------------
-// Version: 9.8.0 | April 9, 2022
+// Version: 9.8.1 | April 10, 2022
 // ----------------------------------
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
@@ -23,17 +23,18 @@ net_maxpacketdrop 0 // Use all packets
 cl_timeout 60 // Max client timeout
 //cl_smooth 1 // Do not instantly correct prediction errors, as they are predominantly small enough to be smoothed over with negligible error and has less distracting jitters in view
 cl_smoothtime .05 // Decrease smooth time to reject large prediction errors faster
-hud_escort_interp .1 // Smooth out payload cart progress over slightly less time
-//cl_pred_optimize 2 // Keep client-side prediction
+//cl_pred_optimize 2 // Keep client-side prediction incrementally going within error bounds
 //net_queued_packet_thread 1 // Keep thread on in case we start sending split packets
 //net_queued_packet_thread 581304 // Queue all packets
 //net_splitrate 1 // Number of fragments for a splitpacket that can be sent per frame
 //net_udp_rcvbuf 131072 // Game does not handle overflows correctly, so no point in setting this lower
 net_chokeloop 1 // Early check for multiplayer
-sv_lan 1 // Protect local servers
+//sv_lan 1 // Protect local servers
+//tf_mm_strict 1 // ^
 cl_localnetworkbackdoor 0 // Fast path to skip backdoor
 host_limitlocal 1 // Prevent excess work on local
 //cl_predict 1 // Force prediction back on during matches (https://github.com/ValveSoftware/Source-1-Games/issues/2618) (does not work in autoexec)
+net_blockmsg 0 // Skip filtering faster
 
 // Directly forward string cmds to server for lower latency
 alias resetclass"cmd resetclass"
@@ -290,27 +291,26 @@ alias lod
 //mat_specular 0 // Disable specular materials
 //mat_monitorgamma 2.2 // Monitor gamma (2.2 is the assumed value in various places)
 r_lightcache_zbuffercache 1 // Cache places where lighting is able to reach dynamic entities and use new lighting pathway
-mat_parallaxmap 0 // Mark unused parallax mapping shader path as disabled
 mat_softwarelighting 0 // Make sure we use the GPU
 r_hunkalloclightmaps 0 // Use native memory allocation because z buffer cache takes up the hunk
 
 alias lightmaps_off"toggle mat_filterlightmaps"
 
-alias lighting_very_low"mat_filterlightmaps 0;alias lightmaps_override lightmaps_off;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin 999999;r_lightcache_zbuffercache 0;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;mat_bumpmap 0;mat_specular 0;building_cubemaps 1;alias lighting_level echo lighting=very_low"
-alias lighting_low"mat_filterlightmaps 0;alias lightmaps_override lightmaps_off;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0004;r_lightcache_zbuffercache 1;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;mat_bumpmap 0;mat_specular 0;building_cubemaps 1;alias lighting_level echo lighting=low"
-alias lighting_medium"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;mat_bumpmap 1;mat_specular 1;building_cubemaps 1;alias lighting_level echo lighting=medium"
-alias lighting_medium_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 2;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 0;mat_bumpmap 1;mat_specular 1;building_cubemaps 0;alias lighting_level echo lighting=medium_high"
-alias lighting_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 6;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;mat_bumpmap 1;mat_specular 1;building_cubemaps 0;alias lighting_level echo lighting=high"
-alias lighting_very_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 12;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;mat_bumpmap 1;mat_specular 1;building_cubemaps 0;alias lighting_level echo lighting=very_high"
-alias lighting_ultra"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 32;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;mat_bumpmap 1;mat_specular 1;building_cubemaps 0;alias lighting_level echo lighting=ultra"
+alias lighting_very_low"mat_filterlightmaps 0;alias lightmaps_override lightmaps_off;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin 999999;r_lightcache_zbuffercache 0;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;building_cubemaps 1;alias lighting_level echo lighting=very_low"
+alias lighting_low"mat_filterlightmaps 0;alias lightmaps_override lightmaps_off;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0004;r_lightcache_zbuffercache 1;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;building_cubemaps 1;alias lighting_level echo lighting=low"
+alias lighting_medium"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 0;r_lightaverage 0;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 0;mat_disable_lightwarp 1;mat_reducefillrate 1;r_rimlight 0;building_cubemaps 1;alias lighting_level echo lighting=medium"
+alias lighting_medium_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 0;r_maxdlights 0;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 2;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 0;building_cubemaps 0;alias lighting_level echo lighting=medium_high"
+alias lighting_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 6;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;building_cubemaps 0;alias lighting_level echo lighting=high"
+alias lighting_very_high"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 12;r_worldlightmin .0002;r_lightcache_zbuffercache 1;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;building_cubemaps 0;alias lighting_level echo lighting=very_high"
+alias lighting_ultra"mat_filterlightmaps 1;alias lightmaps_override;r_ambientboost 1;r_lightaverage 1;r_dynamic 1;r_maxdlights 32;r_worldlightmin .0002;r_lightcache_zbuffercache 0;r_worldlights 4;mat_disable_lightwarp 0;mat_reducefillrate 0;r_rimlight 1;building_cubemaps 0;alias lighting_level echo lighting=ultra"
 
 alias lighting
 
 // Changing these variables from default cause full material reloads
 // which may be harmful to performance and also cause bugs
 
-alias lighting_ex_low"mat_phong 0;alias lighting_ex_level echo lighting_ex=low"
-alias lighting_ex_high"mat_phong 1;alias lighting_ex_level echo lighting_ex=high"
+alias lighting_ex_low"mat_bumpmap 0;mat_specular 0;mat_phong 0;alias lighting_ex_level echo lighting_ex=low"
+alias lighting_ex_high"mat_bumpmap 1;mat_specular 1;mat_phong 1;alias lighting_ex_level echo lighting_ex=high"
 
 alias lighting_ex
 
@@ -373,13 +373,13 @@ cat_ipc_exec_all quit smoking
 //cl_muzzleflash_dlight_1st 0 // Disable dynamic light from muzzle flash in DoD and possibly other mods
 //cl_drawmonitors 1 // Draw monitors in HL2 and CS
 //muzzleflash_light 1 // Muzzle flash lights
-//cl_fasttempentcollision 5 // Check every x ticks for collisions on syringes and pomson
+//cl_fasttempentcollision 10 // Check every x ticks for collisions on syringes and pomson
 //cl_fasttempentcollision 1000000 // Never check collision
 //cl_fasttempentcollision 0 // Always check collision
 
 alias effects_low"tracer_extra 0;r_drawtracers_firstperson 0;cl_show_splashes 0;cl_ejectbrass 0;cl_muzzleflash_dlight_1st 0;cl_drawmonitors 0;muzzleflash_light 0;cl_fasttempentcollision 1000000;alias effects_level echo effects=low"
 alias effects_medium"tracer_extra 0;r_drawtracers_firstperson 1;cl_show_splashes 1;cl_ejectbrass 0;cl_muzzleflash_dlight_1st 0;cl_drawmonitors 1;muzzleflash_light 0;cl_fasttempentcollision 1000000;alias effects_level echo effects=medium"
-alias effects_high"tracer_extra 1;r_drawtracers_firstperson 1;cl_show_splashes 1;cl_ejectbrass 0;cl_muzzleflash_dlight_1st 0;cl_drawmonitors 1;muzzleflash_light 0;cl_fasttempentcollision 5;alias effects_level echo effects=high"
+alias effects_high"tracer_extra 1;r_drawtracers_firstperson 1;cl_show_splashes 1;cl_ejectbrass 0;cl_muzzleflash_dlight_1st 0;cl_drawmonitors 1;muzzleflash_light 0;cl_fasttempentcollision 10;alias effects_level echo effects=high"
 alias effects_ultra"tracer_extra 1;r_drawtracers_firstperson 1;cl_show_splashes 1;cl_ejectbrass 1;cl_muzzleflash_dlight_1st 1;cl_drawmonitors 1;muzzleflash_light 1;cl_fasttempentcollision 0;alias effects_level echo effects=ultra"
 
 alias effects
@@ -972,7 +972,7 @@ alias vsync
 //gl_batch_tex_creates 1 // Preemptively run glGenTextures calls and add them to a pool instead of doing it per tex
 //gl_batch_tex_destroys 1 // Destroy from batch texture pool
 //gl_radar7954721_workaround_mixed 0 // Disable OpenGL trick which pushes and pops and attributes to work around an old NVIDIA driver bug
-//gl_amd_occlusion_workaround 0 // Disable OpenGL trick which enables SRGB writes on occlusion
+gl_amd_occlusion_workaround 0 // Disable OpenGL trick which enables SRGB writes on occlusion
 //gl_paircache_rows_lg2 11 // Expand number of shader cache rows, improves cache hits at the cost of extra memory
 //sdl_displayindex 0 // Which display index to use (Linux and macOS only)
 
@@ -1014,7 +1014,7 @@ alias vsync
 //cl_software_cursor 1 // Uses a stylized cursor handled by the game instead of the OS
 //tf_scoreboard_mouse_mode 2 // Use mouse mode on scoreboard. 0 - disabled, 1 - always, 2 - on click (MOUSE2).
 //tf_scoreboard_alt_class_icons 1 // Alternate class icons on the scoreboard
-//tf_mm_dashboard_slide_panel_step 10 // Change the horizontal offset of the primary matchmaking panel
+//tf_mm_dashboard_slide_panel_step 20 // Change the horizontal offset of the primary matchmaking panel
 tf_dashboard_slide_time .1 // Time in seconds for dashboard transitions
 tf_item_inspect_model_auto_spin 1 // Auto spin items in the inspect view
 //tf_item_inspect_model_auto_spin 0 // Do not auto spin items in the inspect view
@@ -1049,6 +1049,8 @@ tf_scoreboard_ping_as_text 1 // Use text for ping in the scoreboard
 //tf_queue_spinner_color 0 // Orange queue TF logo spinner
 //tf_queue_spinner_color 1 // Blue queue TF logo spinner
 //tf_hud_notification_duration 3 // How long notifications appear on screen
+//hud_takesshots 1 // Take a scoreboard screenshot at the end of the match
+//tf_mvm_min_players_to_start 1 // Start MvM with 1 player
 
 //cl_hud_playerclass_use_playermodel 1 // Enable live player model in HUD
 //cl_hud_playerclass_use_playermodel 0 // Disable live player model in HUD
@@ -1110,7 +1112,7 @@ alias htmlmotd htmlmotd_off
 //hud_combattext 1 // Enable damage text
 //hud_combattext_batching 1 // Collect damage into one number over a time interval
 //hud_combattext_batching_window 1 // Time in seconds to collect damage (maximum 2 seconds)
-//hud_combattext_doesnt_block_overhead_text 1 // Allow CRIT! to appear
+hud_combattext_doesnt_block_overhead_text 1 // Allow CRIT! to appear
 //hud_combattext_healing 1 // Show healing text
 //hud_combattext_red 255 // Red value for damage text color (0 to 255)
 //hud_combattext_green 0 // Green value for damage text color (0 to 255)
@@ -1131,7 +1133,7 @@ cl_mute_all_comms 1 // Disable text and voice for muted players
 //cl_mute_all_comms 0 // Disable voice for muted players
 //hud_deathnotice_time 5 // How long in seconds a killfeed item stays on screen
 //cl_enable_text_chat 1 // Enable text chat
-tf_chat_popup_hold_time 3 // How long party messages appear on the main menu
+tf_chat_popup_hold_time 5 // How long party messages appear on the main menu
 
 alias messages_off"hud_saytext_time 0;cl_enable_text_chat 0;cl_showtextmsg 0;alias messages_level echo messages=off"
 alias messages_hide"hud_saytext_time 0;cl_enable_text_chat 1;cl_showtextmsg 1;alias messages_level echo messages=hide"
@@ -1331,6 +1333,7 @@ alias debug_vprof_off"vprof_off;vprof_reset;con_logfile 0;vprof_dump_oninterval 
 //cc_sentencecaptionnorepeat 4 // How many times a caption can repeat
 //snd_vox_captiontrace 1 // Show sentence IDs when there is no caption
 //cc_lang lang // Force a specific closed caption language
+cc_captiontrace 0 // Do not report missing captions in console
 
 // -----------------
 // '-- Net Graph --'
