--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -615,6 +615,7 @@ gl_magnify_resolve_mode 1 // Use fastest resolve mode when up scaling too
 gl_batch_tex_creates 1 // Preemptively run glGenTextures calls and add them to a pool instead of doing it per tex
 gl_batch_tex_destroys 1 // Destroy from batch texture pool
 gl_radar7954721_workaround_mixed 0 // Disable OpenGL trick which pushes and pops and attributes to work around an old NVIDIA driver bug
+gl_amd_occlusion_workaround 0 // Disable OpenGL trick which enables SRGB writes on occlusion
 gl_paircache_rows_lg2 11 // Expand number of shader cache rows, improves cache hits at the cost of extra memory
 //sdl_displayindex 0 // Which display index to use (Linux and macOS only)
 
